<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.medical.doctfin.DoctorListMapView" >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/displayToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="15dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" >
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- <LinearLayout -->
        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:orientation="vertical" > -->

        <fragment
            android:id="@+id/mapFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            class="com.google.android.gms.maps.SupportMapFragment" />

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/displayDoctDetailCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:visibility="gone"
            card_view:cardCornerRadius="0dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp" >

                <com.medical.utils.CircleImageView
                    android:id="@+id/doctmapImageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/reguserimage" />

                <TextView
                    android:id="@+id/doctmapAddressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/doctmapImageView"
                    android:text="@string/addressString" />

                <TextView
                    android:id="@+id/doctmapNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/doctmapAddressTextView"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/doctmapImageView"
                    android:text="@string/doctNameString" />

                 <TextView
                     android:id="@+id/doctmapDistanceTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBaseline="@+id/doctmapNameTextView"
                     android:layout_alignBottom="@+id/doctmapNameTextView"
                     android:layout_alignParentRight="true"
                     android:text="@string/distanceString" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <!-- </LinearLayout> -->
    </FrameLayout>

</LinearLayout>